@@ -1,15 +1,15 @@
 org.gradle.jvmargs=-Xmx1G
 
-minecraft_version = 19w39a
-yarn_version = build.2
-loader_version = 0.6.2+build.166
-fabric_version = 0.4.0+build.239-1.15
+minecraft_version = 19w42a
+yarn_version = build.9
+loader_version = 0.6.3+build.168
+fabric_version = 0.4.8+build.255-1.15
 
-mod_version = 3.5.28
+mod_version = 3.6.29
 maven_group = ninjaphenix
 archives_base_name = expandedstorage
 game_version = 1.15-Snapshot
-release_type = beta
+release_type = release
 
-rei_version = 3.1.4+build.21
-modmenu_version = 1.7.11-unstable.19w36a+build.3
+rei_version = 3.1.6-unstable.201910241532
+modmenu_version = 1.7.15-unstable.19w42a+build.11
