@@ -98,6 +98,6 @@ public abstract class ChestModifierItem extends Item
 
     protected TypedActionResult<ItemStack> useModifierInAir(World world, PlayerEntity player, Hand hand)
     {
-        return new TypedActionResult<>(ActionResult.PASS, player.getStackInHand(hand), false);
+        return TypedActionResult.pass(player.getStackInHand(hand));
     }
 }
