@@ -13,6 +13,7 @@ import ninjaphenix.expandedstorage.api.Registries;
 import ninjaphenix.expandedstorage.api.block.CursedChestBlock;
 import ninjaphenix.expandedstorage.api.block.OldChestBlock;
 import ninjaphenix.expandedstorage.api.block.entity.CursedChestBlockEntity;
+import ninjaphenix.expandedstorage.api.block.entity.CustomBlockEntityType;
 import ninjaphenix.expandedstorage.api.block.entity.OldChestBlockEntity;
 
 @SuppressWarnings("WeakerAccess")
@@ -22,6 +23,7 @@ public class ModBlocks
     public static BlockEntityType<OldChestBlockEntity> FULL_CURSED_CHEST;
 
     public static CursedChestBlock wood_chest;
+    public static CursedChestBlock pumpkin_chest;
     public static CursedChestBlock iron_chest;
     public static CursedChestBlock gold_chest;
     public static CursedChestBlock diamond_chest;
@@ -39,6 +41,10 @@ public class ModBlocks
                 new TranslatableText("container.expandedstorage.wood_chest"), ExpandedStorage.getId("entity/wood_chest/single"),
                 ExpandedStorage.getId("entity/wood_chest/vanilla"), ExpandedStorage.getId("entity/wood_chest/tall"),
                 ExpandedStorage.getId("entity/wood_chest/long"));
+        pumpkin_chest = register(new CursedChestBlock(Block.Settings.copy(Blocks.PUMPKIN)), "pumpkin_chest", 3,
+                new TranslatableText("container.expandedstorage.pumpkin_chest"), ExpandedStorage.getId("entity/pumpkin_chest/single"),
+                ExpandedStorage.getId("entity/pumpkin_chest/vanilla"), ExpandedStorage.getId("entity/pumpkin_chest/tall"),
+                ExpandedStorage.getId("entity/pumpkin_chest/long"));
         iron_chest = register(new CursedChestBlock(Block.Settings.copy(Blocks.IRON_BLOCK)), "iron_chest", 6,
                 new TranslatableText("container.expandedstorage.iron_chest"), ExpandedStorage.getId("entity/iron_chest/single"),
                 ExpandedStorage.getId("entity/iron_chest/vanilla"), ExpandedStorage.getId("entity/iron_chest/tall"),
@@ -66,9 +72,9 @@ public class ModBlocks
         old_obsidian_chest = registerOld(new OldChestBlock(Block.Settings.copy(Blocks.OBSIDIAN)), "obsidian_chest", 12,
                 new TranslatableText("container.expandedstorage.obsidian_chest"));
         CURSED_CHEST = Registry.register(Registry.BLOCK_ENTITY, ExpandedStorage.getId("cursed_chest"),
-                BlockEntityType.Builder.create(CursedChestBlockEntity::new, wood_chest, iron_chest, gold_chest, diamond_chest, obsidian_chest).build(null));
-        FULL_CURSED_CHEST = Registry.register(Registry.BLOCK_ENTITY, ExpandedStorage.getId("old_cursed_chest"), BlockEntityType.Builder.create(
-                OldChestBlockEntity::new, old_wood_chest, old_iron_chest, old_gold_chest, old_diamond_chest, old_obsidian_chest).build(null));
+                new CustomBlockEntityType<>(CursedChestBlockEntity::new, null, (b) -> b instanceof CursedChestBlock));
+        FULL_CURSED_CHEST = Registry.register(Registry.BLOCK_ENTITY, ExpandedStorage.getId("old_cursed_chest"),
+                new CustomBlockEntityType<>(OldChestBlockEntity::new, null, (b) -> b instanceof OldChestBlock));
     }
 
     private static OldChestBlock registerOld(OldChestBlock block, String name, int rows, TranslatableText containerName)
