@@ -2,11 +2,12 @@ package ninjaphenix.expandedstorage.client.model;
 
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
-import net.minecraft.class_4587;
-import net.minecraft.class_4588;
 import net.minecraft.client.model.Model;
 import net.minecraft.client.model.ModelPart;
+import net.minecraft.client.render.RenderLayer;
+import net.minecraft.client.render.VertexConsumer;
 import net.minecraft.client.texture.Sprite;
+import net.minecraft.util.math.MatrixStack;
 
 @Environment(EnvType.CLIENT)
 public class SingleChestModel extends Model
@@ -16,6 +17,7 @@ public class SingleChestModel extends Model
 
     public SingleChestModel(int textureWidth, int textureHeight)
     {
+        super(RenderLayer::getEntitySolid);
         this.textureWidth = textureWidth;
         this.textureHeight = textureHeight;
         lid = new ModelPart(this, 0, 0);
@@ -27,9 +29,9 @@ public class SingleChestModel extends Model
         this(64, 48);
         lid.addCuboid(0, 0, 0, 14, 5, 14, 0);
         lid.addCuboid(6, -1, 14, 2, 4, 1, 0);
-        lid.setRotationPoint(1, 9, 1);
+        lid.setPivot(1, 9, 1);
         base.addCuboid(0, 0, 0, 14, 10, 14, 0);
-        base.setRotationPoint(1, 0, 1);
+        base.setPivot(1, 0, 1);
     }
 
     public void setLidPitch(float pitch)
@@ -38,9 +40,16 @@ public class SingleChestModel extends Model
         lid.pitch = -((1.0F - pitch * pitch * pitch) * 1.5707964F);
     }
 
-    public void appendToBuffer(class_4587 bufferBuilder, class_4588 something, float scale, int textureOffsetY, Sprite texture)
+    public void render(MatrixStack stack, VertexConsumer consumer, float scale, int textureOffsetX, int textureOffsetY, Sprite texture)
     {
-        base.method_22698(bufferBuilder, something, scale, textureOffsetY, texture);
-        lid.method_22698(bufferBuilder, something, scale, textureOffsetY, texture);
+        base.render(stack, consumer, scale, textureOffsetX, textureOffsetY, texture);
+        lid.render(stack, consumer, scale, textureOffsetX, textureOffsetY, texture);
     }
+
+    // Fixes IDE errors
+    @Override
+    public void accept(ModelPart modelPart) { this.method_22696(modelPart); }
+
+    @Override
+    public void render(MatrixStack matrixStack, VertexConsumer vertexConsumer, int i, int i1, float v, float v1, float v2) { }
 }
