@@ -1,0 +1,7 @@
+{
+  "variants": {
+    "": {
+      "model": "expandedstorage:block/pumpkin_chest"
+    }
+  }
+}
