@@ -1,5 +1,6 @@
 {
   "container.expandedstorage.wood_chest": "Chest",
+  "container.expandedstorage.pumpkin_chest": "Pumpkin Chest",
   "container.expandedstorage.iron_chest": "Iron Chest",
   "container.expandedstorage.gold_chest": "Gold Chest",
   "container.expandedstorage.diamond_chest": "Diamond Chest",
@@ -7,6 +8,7 @@
   "container.expandedstorage.generic_double": "Large %s",
   "container.expandedstorage.error": "Error",
   "block.expandedstorage.wood_chest": "Chest",
+  "block.expandedstorage.pumpkin_chest": "Pumpkin Chest",
   "block.expandedstorage.iron_chest": "Iron Chest",
   "block.expandedstorage.gold_chest": "Gold Chest",
   "block.expandedstorage.diamond_chest": "Diamond Chest",
