@@ -1,0 +1,5 @@
+{
+  "textures": {
+    "particle": "expandedstorage:block/pumpkin_chest_front"
+  }
+}
