@@ -1,0 +1,6 @@
+{
+  "parent": "item/chest",
+  "textures": {
+    "particle": "expandedstorage:block/pumpkin_chest_front"
+  }
+}
